[package]
name = "precisej-printable-errno"
version = "0.1.2"
description = "Printable system call errors for nix"
authors = ["Hugo Cuenca <hugo.cuenca.arana@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hugo-cuenca/precisej-rs-printable-errno/"
repository = "https://github.com/hugo-cuenca/precisej-rs-printable-errno/"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["error", "nix", "errno", "libc", "error-handling"]
exclude = [
    ".idea/*",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.0"